syntax = "proto3";

package dev.matvenoid.proto;

option java_multiple_files = true;

import "properties.proto";

service PropertyService {
  rpc GetProperties(GetPropertiesRequest) returns (GetPropertiesResponse);
}
